@@ -3,14 +3,17 @@ package com.dnd.ground.domain.friend.service;
 import com.dnd.ground.domain.friend.Friend;
 import com.dnd.ground.domain.friend.FriendStatus;
 import com.dnd.ground.domain.friend.dto.FriendCondition;
+import com.dnd.ground.domain.friend.dto.FriendRecommendPageInfo;
+import com.dnd.ground.domain.friend.dto.FriendRecommendRequestDto;
 import com.dnd.ground.domain.friend.dto.FriendResponseDto;
 import com.dnd.ground.domain.friend.repository.FriendRepository;
+import com.dnd.ground.domain.matrix.dto.Location;
 import com.dnd.ground.domain.user.User;
 import com.dnd.ground.domain.user.repository.UserRepository;
 import com.dnd.ground.global.exception.ExceptionCodeSet;
 import com.dnd.ground.global.exception.FriendException;
 import com.dnd.ground.global.exception.UserException;
-import com.dnd.ground.global.notification.NotificationForm;
+import com.dnd.ground.global.notification.dto.NotificationForm;
 import com.dnd.ground.global.notification.NotificationMessage;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -21,7 +24,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.dnd.ground.domain.friend.FriendStatus.*;
 
@@ -29,10 +35,8 @@ import static com.dnd.ground.domain.friend.FriendStatus.*;
  * @description 친구와 관련된 서비스 구현체
  * @author 박찬호
  * @since 2022-08-01
- * @updated 1. 요청을 보낸 경우 user에 요청한 사람, friend에 받은 사람을 WAIT 상태로 저장.
- *          2. 친구 요청 수락한 경우, ACCEPT 상태의 친구 데이터를 2개 저장.
- *          3. 이에 따른 메소드 수정
- *         2023-03-06
+ * @updated 1.네모두 추천 친구 API 구현
+ *          - 2023.05.16 박찬호
  */
 
 @Slf4j
@@ -48,7 +52,7 @@ public class FriendServiceImpl implements FriendService {
     private static final Integer FRIEND_SMALL_PAGING_NUMBER = 3; //3개씩 페이징 하기 위해 1개 더 가져옴.
 
     //친구 목록과 추가 정보를 함께 반환
-    public FriendResponseDto getFriends(String nickname, Integer offset) {
+    public FriendResponseDto getFriends(String nickname, Long offset, Integer size) {
 
         //유저 및 친구 조회
         User user = userRepository.findByNickname(nickname).orElseThrow(
@@ -87,21 +91,19 @@ public class FriendServiceImpl implements FriendService {
     }
 
     //요청받은 친구 목록 조회
-    public FriendResponseDto.ReceiveRequest getReceiveRequest(String nickname, Integer offset) {
+    public FriendResponseDto getReceiveRequest(String nickname, Long offset, Integer size) {
         User user = userRepository.findByNickname(nickname).orElseThrow(
                 () -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
-        FriendResponseDto.ReceiveRequest response = new FriendResponseDto.ReceiveRequest();
-        boolean isLast;
+        List<FriendResponseDto.FInfo> infos = new ArrayList<>();
 
         PageRequest pageRequest = PageRequest.of(offset, FRIEND_SMALL_PAGING_NUMBER);
         Slice<User> receiveRequestSlice = friendRepository.findReceiveRequest(user, pageRequest);
-        isLast = receiveRequestSlice.isLast();
 
         List<User> receiveRequest = receiveRequestSlice.getContent();
 
         for (User friend : receiveRequest) {
-            response.getFriendsInfo().add(
+            infos.add(
                     FriendResponseDto.FInfo.of()
                             .nickname(friend.getNickname())
                             .picturePath(friend.getPicturePath())
@@ -109,9 +111,24 @@ public class FriendServiceImpl implements FriendService {
             );
         }
 
-        response.setSize(receiveRequest.size());
-        response.setIsLast(isLast);
-        return response;
+//        return new FriendResponseDto(infos, receiveRequestSlice.getSize(), receiveRequestSlice.isLast());
+        return null;
+    }
+
+    /*네모두 추천 친구(거리가 가까운 순으로 추천)*/
+    @Override
+    public FriendResponseDto.RecommendResponse recommendNemoduFriends(String nickname, Location location, Double distance, Integer size) {
+        List<FriendRecommendPageInfo> result = friendRepository.recommendFriends(nickname, location, distance, size);
+
+        boolean isLast = result.size() <= size;
+        if (!isLast) result.remove(result.size() - 1);
+        Double offset = isLast ? null : result.get(result.size() - 1).getDistance();
+
+        List<FriendResponseDto.FInfo> content = result.stream()
+                .map(c -> new FriendResponseDto.FInfo(c.getNickname(), c.getPicturePath()))
+                .collect(Collectors.toList());
+
+        return new FriendResponseDto.RecommendResponse(content, result.size(), isLast, offset);
     }
 
     //List<User> 형태의 친구 목록 반환
@@ -139,16 +156,22 @@ public class FriendServiceImpl implements FriendService {
         User user = userRepository.findByNickname(userNickname)
                 .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND));
 
-        User friend = userRepository.findByNickname(friendNickname)
+        User friend = userRepository.findByNicknameWithProperty(friendNickname)
                 .orElseThrow(() -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND));
 
-        if (friendRepository.findFriendInProgress(user, friend).isPresent())
+        if (friendRepository.findFriendInProgress(user, friend).size() > 0)
             throw new FriendException(ExceptionCodeSet.FRIEND_DUPL);
         else if (userNickname.equals(friendNickname)) throw new FriendException(ExceptionCodeSet.BAD_REQUEST);
 
         friendRepository.save(new Friend(user, friend, WAIT));
 
-        pushNotificationPublisher.publishEvent(new NotificationForm(List.of(friend), List.of(user.getNickname()), null, NotificationMessage.FRIEND_RECEIVED_REQUEST));
+        pushNotificationPublisher.publishEvent(
+                new NotificationForm(
+                        new ArrayList<>(Arrays.asList(friend)),
+                        List.of(user.getNickname()),
+                        null,
+                        NotificationMessage.FRIEND_RECEIVED_REQUEST)
+        );
 
         return true;
     }
@@ -156,16 +179,16 @@ public class FriendServiceImpl implements FriendService {
     /*친구 요청 수락, 거절 등에 대한 처리*/
     @Transactional
     public FriendResponseDto.ResponseResult responseFriend(String userNickname, String friendNickname, FriendStatus status) {
-        User user = userRepository.findByNickname(userNickname).orElseThrow(
-                () -> new UserException(ExceptionCodeSet.USER_NOT_FOUND)
+        User user = userRepository.findByNickname(userNickname)
+                .orElseThrow(() -> new UserException(ExceptionCodeSet.USER_NOT_FOUND)
         );
 
-        User friend = userRepository.findByNickname(friendNickname).orElseThrow(
-                () -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND)
+        User friend = userRepository.findByNicknameWithProperty(friendNickname)
+                .orElseThrow(() -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND)
         );
 
-        Friend friendRelation = friendRepository.findRequestFriend(user, friend).orElseThrow(
-                () -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND_REQ)
+        Friend friendRelation = friendRepository.findRequestFriend(user, friend)
+                .orElseThrow(() -> new FriendException(ExceptionCodeSet.FRIEND_NOT_FOUND_REQ)
         );
 
         if (status.equals(ACCEPT)) {
@@ -178,7 +201,12 @@ public class FriendServiceImpl implements FriendService {
                             .build()
             );
 
-            pushNotificationPublisher.publishEvent(new NotificationForm(List.of(friend), List.of(user.getNickname()), null, NotificationMessage.FRIEND_AGREE));
+            pushNotificationPublisher.publishEvent(new NotificationForm(
+                    new ArrayList<>(Collections.singletonList(friend)),
+                    List.of(user.getNickname()),
+                    null,
+                    NotificationMessage.FRIEND_ACCEPT)
+            );
         } else if (status.equals(REJECT)) {
             friendRepository.delete(friendRelation);
         } else throw new FriendException(ExceptionCodeSet.FRIEND_INVALID_STATUS);
@@ -201,6 +229,11 @@ public class FriendServiceImpl implements FriendService {
             friendRepository.deleteAll(friendRelation);
             return true;
         }
+    }
+
+    /*전체 친구 삭제*/
+    public void deleteFriendAll(User user) {
+        friendRepository.deleteAllByUser(user);
     }
 
     /*회원과 친구가 어떤 관계인지 나타내는 메소드*/
